# audio-delay-plugin

./: CMakeLists.txt  README.md  audiodelay.jucer
Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist  VST3.entitlements
Builds/MacOSX/audiodelay.xcodeproj/: project.pbxproj
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: DelayManager.cpp  DelayManager.h  LFOManager.cpp  LFOManager.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
